--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <link rel="stylesheet" href="./index.css">
 </head>
 <body>
-    <div id="root">hello</div>
+    <div id="root">Loading..</div>
     <script src="./src/app.js" type="module"></script>
     
 </body>
